fix: fix bad mappings in SU generation